# matcha-core

./: .gitignore  CMakeLists.txt
cmake/: matcha-coreConfig.cmake
include/: matcha  matcha.h  tensor
include/bits_of_matcha/tensor/: dtype.h  expr.h  scope.h  shape.h  tensor.h  tensorbuffer.h  utils.h
include/bits_of_matcha/tensor/device/: cpu.h  default.h  device.h  global.h  threadpool.h
include/bits_of_matcha/tensor/device/abstract/: add.h  computation.h  multiply.h
include/bits_of_matcha/tensor/device/cpu/: add.h  multiply.h
include/bits_of_matcha/tensor/device/threadpool/: add.h
include/bits_of_matcha/tensor/fn/: add.h  elementwise.h  fn.h  multiply.h
include/bits_of_matcha/tensor/iterations/: axisiteration.h  flatiteration.h
include/bits_of_matcha/tensor/iterators/: flatiterator.h
include/matcha/: AbstractTensor.h  buffer.h  dataset.h  dtype.h  element.h  estimators.h  fn.h  index.h  model.h  range.h  shape.h  tensor.h  tio.h  transformers.h
include/matcha/backend/: ndarray.h
include/matcha/data/: batch.h  batches.h  instance.h
include/matcha/dataset/: csv.h  dataset.h
include/matcha/estimators/: estimator.h  neuralnetwork.h
include/matcha/fn/: accuracy.h  add.h  divide.h  elementwisebinary.h  elementwiseunary.h  exp.h  fn.h  matmul.h  max.h  multiply.h  pow.h  relu.h  softmax.h  square.h  subtract.h  sum.h
include/matcha/iterations/: axisiteration.h  flatiteration.h
include/matcha/iterators/: LinearIterator.h  MultidimensionalIterator.h  axisiterator.h  flatiterator.h
include/matcha/transformers/: transformer.h
include/matcha/transformers/scalers/: minmax.h
src/: main.cpp
src/bits_of_matcha/tensor/: dtype.cpp  expr.cpp  scope.cpp  shape.cpp  tensor.cpp  tensorbuffer.cpp  utils.cpp
src/bits_of_matcha/tensor/device/: cpu.cpp  default.cpp  global.cpp  threadpool.cpp
src/bits_of_matcha/tensor/device/abstract/: add.cpp  multiply.cpp
src/bits_of_matcha/tensor/device/cpu/: add.cpp  multiply.cpp
src/bits_of_matcha/tensor/device/threadpool/: add.cpp
src/bits_of_matcha/tensor/fn/: add.cpp  elementwise.cpp  fn.cpp  multiply.cpp
src/bits_of_matcha/tensor/iterations/: axisiteration.cpp  flatiteration.cpp
src/bits_of_matcha/tensor/iterators/: axisiterator.cpp  flatiterator.cpp
src/matcha/: AbstractTensor.cpp  iterators.cpp  model.cpp  range.cpp  tensor.cpp  tio.cpp
src/matcha/backend/: ndarray.cpp
src/matcha/data/: batch.cpp  batches.cpp  instance.cpp
src/matcha/dataset/: csv.cpp
src/matcha/fn/: accuracy.cpp  add.cpp  divide.cpp  elementwisebinary.cpp  elementwiseunary.cpp  exp.cpp  fn.cpp  matmul.cpp  max.cpp  multiply.cpp  pow.cpp  relu.cpp  softmax.cpp  square.cpp  subtract.cpp  sum.cpp
src/matcha/iterations/: axisiteration.cpp  flatiteration.cpp
src/matcha/iterators/: LinearIterator.cpp  MultidimensionalIterator.cpp  axisiterator.cpp  flatiterator.cpp
